# fullscope-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
src/fullscope_mcp_server/: __init__.py  server.py
